<resources>
    <!-- App Name -->
    <string name="app_name">Batch Uninstaller</string>

    <!-- General -->
    <string name="dont_show_again">Don\'t show again</string>
    <string name="understood">Understood</string>
    <string name="granted">Permission granted</string>
    <string name="denied">Permission denied</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reboot_now">Reboot now</string>
    <string name="reboot_later">Reboot later</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <!-- Uninstall -->
    <string name="uninstall_confirmation">Are you sure you want to uninstall these app(s)?</string>
    <string name="uninstall_complete">Uninstallation complete</string>
    <string name="uninstall_fail">Uninstallation failed or cancelled</string>
    <string name="uninstall_cancel">Uninstallation cancelled</string>

    <!-- Root Explanations -->
    <string name="root_check_content">
        Your phone is rooted. Awesome!
        We will ask for the root permission next.
        If you choose to deny it, the app will still work, but there will be a prompt before each app is uninstalled.
        \nUnfortunately, this is a limitation of the Android system.
    </string>
    <string name="no_root_check_content">
        Your phone is not rooted.
        The app will still work, but there will be a prompt before each app is uninstalled.
        Unfortunately, this is a limitation of the Android system.
        However, this process will still be faster than uninstalling them from the settings menu.
    </string>
    <string name="root_system_app">
        Uninstalling certain system apps can brick the device/render it unusable in some cases.
        Select ONLY if you are absolutely sure.
    </string>
    <string name="no_root_system_app">
        System apps can only be restored to the original installed version.
        They cannot be uninstalled completely without root permissions.
    </string>
    <string name="root_grant_ask">
        We will ask for root permissions now.
        If your phone is not rooted, or you don\'t want to use root, you can deny it.
    </string>
    <string name="system_app_reboot">
        You have uninstalled one or more system apps.
        To remove them from the launcher and app drawer, you need to reboot the phone.
    </string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_text">
        A simple batch uninstaller app to uninstall multiple apps at once.
        Works best if phone is rooted.
        \n\nThis app is open-source and can be found on GitHub!
    </string>
    <string name="github">GitHub Link</string>
    <string name="important">Important</string>
    <string name="licenses">Licenses</string>
    <string name="feedback">Feedback</string>
    <string name="send_email">Send Email</string>
    <string name="email_subject">Batch Uninstaller Feedback</string>
    <string name="rate">Rate Us</string>

    <!-- Donate -->
    <string name="donate">Donate</string>
    <string name="night_mode">Night Mode</string>
    <string name="test_app">Test App</string>
    <string name="_26_09_1234">26/09/1234</string>
    <string name="_45_mb">45 MB</string>
    <string name="_135_mb">135 MB</string>
    <string name="uninstall_trailing">Uninstalling...</string>
    <string name="cancel">Cancel</string>
    <string name="uninstall_fail_toast">\"Failed to uninstall \"</string>
    <string name="uninstall_past_tense">\"Uninstalled \"</string>
    <string name="done">Done</string>
    <string name="not_root">Not Rooted</string>
    <string name="exit">Exit</string>
    <string name="denied_rationale">Cannot uninstall packages until this permission is granted in Android Q and above for non-root devices.</string>
    <string name="save_profile">Save Profile</string>
    <string name="cancel_profile">Cancel Profile</string>
    <string name="profile_name">Profile Name</string>

    <!-- Arrays -->
    <string-array name="sort">
        <item>By Name (ASC)</item>
        <item>By Name (DESC)</item>
        <item>By Size (ASC)</item>
        <item>By Size (DESC)</item>
        <item>By Installed Date (ASC)</item>
        <item>By Installed Date (DESC)</item>
    </string-array>

    <string-array name="filter">
        <item>System Apps</item>
        <item>User Apps</item>
        <item>All Apps</item>
    </string-array>

    <string-array name="night_mode_options">
        <item>AUTO</item>
        <item>DAY</item>
        <item>NIGHT</item>
    </string-array>
</resources>
