<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_appitem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_toEndOf="@+id/img_icon"
        android:layout_toRightOf="@id/img_icon"
        android:text="@string/test_app"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_appname"
        android:layout_alignStart="@+id/tv_appname"
        android:layout_alignLeft="@+id/tv_appname"
        android:text="@string/_26_09_1234"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_appsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_date"
        android:layout_alignStart="@+id/tv_appname"
        android:layout_alignLeft="@+id/tv_appname"
        android:layout_marginTop="5dp"
        android:text="@string/_45_mb"
        android:textSize="14sp" />
</RelativeLayout>