<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:hint="@string/profile_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="30dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_profile_create_applist"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_profile_create_applist"
        android:layout_margin="30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_profile_create_applist"
        android:layout_margin="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
